# ati

./: .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
ati-client/: pyproject.toml
ati-client/python/: README.md  pyproject.toml
ati-client/python/src/ati/: __init__.py  errors.py  scope.py  token.py
ati-client/python/tests/: test_orchestrator.py  test_scope.py  test_token.py
ati-client/src/ati/: __init__.py  scope.py
ati-client/tests/: test_orchestrator.py  test_scope.py
contrib/: README.md
deploy/: Dockerfile
deploy/examples/vm/: README.md
deploy/examples/vm/caddy/: Caddyfile
deploy/examples/vm/haproxy/: haproxy.cfg.example
deploy/examples/vm/manifests/: example-passthrough.toml
deploy/examples/vm/systemd/: ati-rotate-keyring.service  ati-rotate-keyring.timer  ati.service
deploy/examples/vm/systemd/ati.service.d/: otel.conf.example
deploy/examples/vm/verdaccio/: config.yaml.example
docs/: IDEAS.md  JWT_STANDARDS_2026.md  OTEL.md  PERSISTENCE.md  SECURITY.md  assist-examples.md
examples/: README.md
examples/claude-agent-sdk/: README.md  mcp_agent.py  openapi_agent.py  requirements.txt
examples/codex/: AGENTS.md  README.md  mcp_agent.py  mcp_agent.sh  openapi_agent.py  openapi_agent.sh  requirements.txt
examples/google-adk/: README.md  mcp_agent.py  openapi_agent.py
examples/langchain/: README.md  mcp_agent.py  openapi_agent.py  requirements.txt  top_stories.json
examples/openai-agents-sdk/: README.md  mcp_agent.py  openapi_agent.py  requirements.txt
examples/pi/: README.md  mcp_agent.ts  openapi_agent.ts  package-lock.json  package.json
manifests/: README.md  _llm.toml  amadeus.toml  apify.toml  arxiv.toml  attom.toml  aviation_edge.toml  aviationstack.toml  browserbase.toml  clinicaltrials.toml  cloudflare-radar-mcp.toml  complyadvantage.toml  courtlistener.toml  crossref.toml  datalastic.toml  deepwiki-mcp.toml  ebay.toml  epo.toml  everything-mcp.toml  example.toml  financial_datasets.toml  finnhub.toml  fred.toml  github-mcp.toml  google-ads.toml  google-workspace.toml  google_patents.toml  google_places.toml  hackernews.toml  linear-mcp.toml  middesk.toml  nhtsa.toml  opencorporates.toml  parallel.toml  parcha-tools-mcp.toml  particle.toml  pdl.toml  pipl.toml  pmc.toml  pubmed.toml  (+8 more)
migrations/: 20260501000001_init_persistence.sql  20260512000001_control_plane.sql
scripts/: coverage-loop.md  test_cleanup_e2e.sh  test_full_stack_e2e.sh  test_otel_e2e.sh  test_proxy_e2e.sh  test_proxy_server_e2e.sh  test_skill_fetch_e2e.sh  test_skills_e2e.sh
scripts/e2e/: README.md  fake_op.sh  lib.sh  mock_http.py  mock_ws.py  sign.py  ws_probe.py
scripts/e2e/fixtures/: manifest_auth.toml.tmpl  manifest_deny.toml.tmpl  manifest_host_match.toml.tmpl  manifest_no_strip.toml.tmpl  manifest_passthrough.toml.tmpl  manifest_replace.toml.tmpl  manifest_slow.toml.tmpl  manifest_ws.toml.tmpl  manifest_ws_blackhole.toml.tmpl  manifest_ws_disabled.toml.tmpl  manifest_ws_query.toml.tmpl  op_bootstrap.json  op_corrupt.json  op_no_secret.json  op_rotated.json
scripts/e2e/groups/: group_a.sh  group_b.sh  group_c.sh  group_d.sh  group_e.sh  group_f.sh
skills/ati-tools-reference/: SKILL.md  skill.toml
skills/google-workspace/: SKILL.md  skill.toml
specs/: amadeus.json  attom.json  aviation_edge.json  aviationstack.json  clinicaltrials.json  courtlistener.json  crossref.json  ebay.json  financial_datasets.json  finnhub.json  fred.json  middesk.json  nhtsa.json  pmc.json  pubmed.json  sec_edgar.json  semantic_scholar.json
src/: lib.rs  main.rs
src/cli/: audit.rs  auth.rs  call.rs  cli_capture.rs  common.rs  edge.rs  file_manager.rs  help.rs  init.rs  keys.rs  mcp.rs  mod.rs  openapi.rs  plan.rs  provider.rs  skillati.rs  skills.rs  token.rs  tools.rs
src/core/: audit.rs  auth_generator.rs  call_log.rs  cli_executor.rs  customer_store.rs  db.rs  dirs.rs  error.rs  file_manager.rs  gcs.rs  http.rs  jwt.rs  keyring.rs  keys.rs  logging.rs  manifest.rs  mcp_client.rs  mod.rs  oauth_mcp.rs  oauth_refresh.rs  oauth_store.rs  openapi.rs  otel.rs  passthrough.rs  provider_store.rs  rate.rs  response.rs  scope.rs  secret_backend.rs  secret_resolver.rs  secrets.rs  sentry_scope.rs  sig_verify.rs  skill.rs  skillati.rs  token.rs  xai.rs
src/core/resolver/: db_resolver.rs  mod.rs
src/output/: json.rs  mod.rs  table.rs  text.rs
src/providers/: generic.rs
src/proxy/: client.rs  server.rs
src/security/: memory.rs  mod.rs  sealed_file.rs
tests/: audit_test.rs  auth_gen_errors_test.rs  auth_generator_test.rs  call_test.rs  cli_executor_test.rs  control_plane_db_test.rs  credential_resolver_db_test.rs  db_live_test.rs  db_optional_test.rs  deploy_examples_test.rs  dirs_test.rs  file_manager_allowlist_test.rs  file_manager_proxy_test.rs  file_manager_test.rs  google_workspace_manifest_test.rs  help_test.rs  http_test.rs  init_test.rs  keyring_test.rs  keys_live_test.rs  keys_test.rs  manifest_test.rs  mcp_cmd_test.rs  mcp_live_test.rs  oauth2_test.rs  oauth_live_test.rs  oauth_mcp_test.rs  oauth_refresh_test.rs  oauth_store_test.rs  openapi_test.rs  otel_test.rs  passthrough_test.rs  passthrough_ws_test.rs  plan_test.rs  provider_load_test.rs  proxy_mcp_test.rs  proxy_server_test.rs  proxy_skills_test.rs  proxy_test.rs  rate_test.rs  (+11 more)
tests/common/: mod.rs
