[package]
name = "agent-tools-interface"
version = "0.7.10"
edition = "2021"
description = "Agent Tools Interface — secure CLI for AI agent tool execution"
license = "Apache-2.0"
repository = "https://github.com/Parcha-ai/ati"
homepage = "https://ati.tools"
readme = "README.md"
keywords = ["agent", "tools", "mcp", "openapi", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "ati"
path = "src/lib.rs"

[[bin]]
name = "ati"
path = "src/main.rs"

[features]
default = []
sentry = ["dep:sentry", "dep:sentry-tracing"]
# Optional Postgres persistence (virtual keys, call audit log).
# Enable with --features db. Build remains static-musl-friendly: sqlx uses rustls.
db = ["dep:sqlx"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false }

# Ref-counted byte buffer (used to avoid cloning large upload payloads across
# retry attempts and across the reqwest body handoff).
bytes = "1"

# HTTP server (for `ati proxy`)
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Optional Sentry integration (off by default, enable with --features sentry)
# Includes errors, traces, AND Sentry Logs (structured log forwarding).
sentry = { version = "0.47", features = ["tracing", "logs", "reqwest", "rustls"], default-features = false, optional = true }
sentry-tracing = { version = "0.47", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"

# JWT
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
ring = "0.17"

# Secure memory
zeroize = { version = "1", features = ["derive"] }
libc = "0.2"

# Response processing
jsonpath-rust = "0.7"

# Output formatting
comfy-table = "7"

# Encoding
base64 = "0.22"
hex = "0.4"

# OpenAPI spec parsing
openapiv3 = "2"
serde_yaml = "0.9"

# Async utilities
futures = "0.3"

# Misc
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
glob = "0.3"
rand = "0.8"
strsim = "0.11.1"

# Optional Postgres driver for the persistence layer (virtual keys, call audit).
# Off by default; enable with `--features db`. Pinned to rustls to match reqwest
# and keep the static-musl release binary working. `chrono` + `json` are needed
# to bind `DateTime<Utc>` and `serde_json::Value` directly into queries from
# the call_log writer.
#
# Note: cargo-audit will report RUSTSEC-2023-0071 from the `rsa` crate. That
# crate is pulled in transitively by sqlx-mysql, which appears in Cargo.lock
# even when the `mysql` feature is disabled (cargo locks all optional deps
# of the umbrella sqlx crate). sqlx-mysql is NOT compiled into our binary.
# The advisory is allowlisted in deny.toml with this justification.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "json"], optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false }
