[package]
name = "agent-tools-interface"
version = "0.7.10"
edition = "2021"
description = "Agent Tools Interface — secure CLI for AI agent tool execution"
license = "Apache-2.0"
repository = "https://github.com/Parcha-ai/ati"
homepage = "https://ati.tools"
readme = "README.md"
keywords = ["agent", "tools", "mcp", "openapi", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "ati"
path = "src/lib.rs"

[[bin]]
name = "ati"
path = "src/main.rs"

[features]
default = []
sentry = ["dep:sentry", "dep:sentry-tracing"]
# Optional Postgres persistence (virtual keys, call audit log).
# Enable with --features db. Build remains static-musl-friendly: sqlx uses rustls.
db = ["dep:sqlx"]
# Optional OpenTelemetry traces + metrics over OTLP/HTTP-protobuf.
# Off by default; enable with --features otel. HTTP-only exporter (no gRPC/tonic)
# to keep the static-musl release binary small. See docs/OTEL.md.
otel = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:tracing-opentelemetry",
]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false }

# Ref-counted byte buffer (used to avoid cloning large upload payloads across
# retry attempts and across the reqwest body handoff).
bytes = "1"

# HTTP server (for `ati proxy`)
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Optional Sentry integration (off by default, enable with --features sentry)
# Includes errors, traces, AND Sentry Logs (structured log forwarding).
sentry = { version = "0.47", features = ["tracing", "logs", "reqwest", "rustls"], default-features = false, optional = true }
sentry-tracing = { version = "0.47", optional = true }

# Optional OpenTelemetry integration (off by default, enable with --features otel).
# HTTP/protobuf transport at runtime, reqwest-based, rustls — same rationale
# as sentry above: keep the static-musl release binary lean.
#
# Tonic note: opentelemetry-otlp's `http-proto` feature enables
# `opentelemetry-proto/gen-tonic-messages`, which pulls `tonic` and
# `tonic-prost` *into the build* for prost-generated message types. We do NOT
# spin up gRPC at runtime — the exporter ships protobuf over HTTP via reqwest
# — so there's no gRPC client, no `tonic::transport::Channel`, no second
# async runtime. The static-musl binary remains a single reqwest+rustls
# transport; the tonic crates contribute the proto message types only.
# Build-size delta with the feature on is ~500 KiB (measured), well under
# the +3 MB budget in the TDD.
#
# Version-pinning note: tracing-opentelemetry 0.32.x still tracks
# opentelemetry/opentelemetry_sdk 0.31, so the whole quartet stays on 0.31
# until tracing-opentelemetry catches up. Bumping any one of these alone
# results in a "multiple versions of crate opentelemetry in the dependency
# graph" compile error; bump them together when upgrading.
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "metrics", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace", "metrics"], optional = true }
tracing-opentelemetry = { version = "0.32", default-features = false, features = ["tracing-log"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
# Constant-time comparison for HMAC digest verification (core/sig_verify.rs).
subtle = "2"
# Atomic Arc-swap for hot-reloading the sandbox signing secret on SIGHUP
# without restarting the proxy.
arc-swap = "1"

# JWT
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
ring = "0.17"

# Secure memory
zeroize = { version = "1", features = ["derive"] }
libc = "0.2"

# Response processing
jsonpath-rust = "0.7"

# Output formatting
comfy-table = "7"

# Encoding
base64 = "0.22"
hex = "0.4"

# OpenAPI spec parsing
openapiv3 = "2"
serde_yaml = "0.9"

# Async utilities
futures = "0.3"

# Misc
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
glob = "0.3"
# Atomic-file primitive used by `ati edge {bootstrap,rotate}-keyring` and by
# the passthrough/sig_verify modules' rotation tests.
tempfile = "3"
# Compiled glob set for passthrough deny_paths matching (faster than Glob-per-path
# at request time; built once at startup).
globset = "0.4"
# Used to pin-project the MaxBytesStream wrapper in core/passthrough.rs.
pin-project-lite = "0.2"
# URL parsing — already pulled transitively via reqwest, named explicitly so the
# passthrough builder can validate base_url at manifest load.
url = "2"
# WebSocket client used by core/passthrough.rs to relay sandbox WS frames
# to upstream services (Browserbase CDP traffic, etc.). connect_async for
# the upstream side; axum's ws feature handles the downstream side.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rand = "0.8"
strsim = "0.11.1"

# Optional Postgres driver for the persistence layer (virtual keys, call audit).
# Off by default; enable with `--features db`. Pinned to rustls to match reqwest
# and keep the static-musl release binary working. Feature set is intentionally
# minimal here — `chrono`/`uuid`/`json` get added when later changes start
# decoding rows or using `query!` macros against typed columns.
#
# Note: cargo-audit will report RUSTSEC-2023-0071 from the `rsa` crate. That
# crate is pulled in transitively by sqlx-mysql, which appears in Cargo.lock
# even when the `mysql` feature is disabled (cargo locks all optional deps
# of the umbrella sqlx crate). sqlx-mysql is NOT compiled into our binary.
# The advisory is allowlisted in deny.toml with this justification.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"], optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false }
# Used by tests/passthrough_ws_test.rs to drive a real WS client + server.
tokio-tungstenite = "0.24"
